Add tests for IRCv3 draft/metadata-2 (#228)
* Copy metadata.py to metadata2.py

* Adapt metadata_2 to stdreplies, and run it on Unreal

Passes on https://github.com/progval/unrealircd-contrib/commit/3968354247d07e341c1ede6e7f3d29688ed702c7

* expect batches

* Improve testing for invalid UTF8, and add test for too-long values

* Test for nick instead of * as target

* Fix fail code

* Add untested 'before-connect' test

* Add a bunch of GetSet tests

* Add tests for KEY_NO_PERMISSION

* Use real metadata keys

* Add tests for SUB

* enable metadata in ergo

* rename deprecated test case

* fix race condition

* Fix failure on servers that don't implement draft/metadata-2

* accommodate UTF8ONLY spec

* fix race condition

* fix race condition

* consolidate redundant test code

* fix race condition

* Download Unreal's third/metadata2 module

* Don't install third/metadata2.c on Unreal 5

* Update third/metadata2.c so it builds on all Unreal versions

* Only load third/metadata2 on Unreal 6 (it doesn't support Unreal 5)

* confirm that friends do not receive updates for invalid values

---------

Co-authored-by: Shivaram Lingamneni <slingamn@cs.stanford.edu>

--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -399,6 +399,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/unrealircd/
         cp $GITHUB_WORKSPACE/data/unreal/* .
+        wget https://raw.githubusercontent.com/progval/unrealircd-contrib/50e839c2e2f1d8b9924126f34bc2f50965c0a557/files/metadata2.c -O src/modules/third/metadata2.c
         # Need to use a specific -march, because GitHub has inconsistent
         # architectures across workers, which result in random SIGILL with some
         # worker combinations
