--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -27,6 +27,7 @@ jobs:
         path: anope
         ref: '2.0'
         repository: anope/anope
+        submodules: ''
     - name: Build Anope
       run: |
         cd $GITHUB_WORKSPACE/anope/
@@ -58,6 +59,7 @@ jobs:
         path: inspircd
         ref: insp4
         repository: inspircd/inspircd
+        submodules: ''
     - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
@@ -78,7 +80,6 @@ jobs:
     needs:
     - test-inspircd
     - test-inspircd-anope
-    - test-inspircd-atheme
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
@@ -121,7 +122,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -162,7 +163,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -179,43 +180,14 @@ jobs:
       with:
         name: pytest-results_inspircd-anope_devel_release
         path: pytest.xml
-  test-inspircd-atheme:
-    needs:
-    - build-inspircd
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-    - name: Download build artefacts
-      uses: actions/download-artifact@v4
-      with:
-        name: installed-inspircd
-        path: '~'
-    - name: Unpack artefacts
-      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
-    - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
-    - name: Install irctest dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - env:
-        IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
-      name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
-        make inspircd-atheme
-      timeout-minutes: 30
-    - if: always()
-      name: Publish results
-      uses: actions/upload-artifact@v4
-      with:
-        name: pytest-results_inspircd-atheme_devel_release
-        path: pytest.xml
 name: irctest with devel_release versions
 'on':
+  pull_request:
+    paths:
+    - .github/workflows/test-devel_release.yml
+  push:
+    paths:
+    - .github/workflows/test-devel_release.yml
   schedule:
   - cron: 51 8 * * 6
   - cron: 51 8 * * 0
